changed build.gradle